--- a/_config.yml
+++ b/_config.yml
@@ -104,10 +104,10 @@ defaults:
       path: ""        # an empty string here means all files in the project
       type: "pages"
     values:
-      show_meta: true   # Show metadata beneath all pages
+      show_meta: false   # Show metadata beneath all pages
       # sidebar:        # Possible values › left, right › by default there will be no sidebar
       comments: false
-      author: "Dornburg"
+      author: Dornburg
   -
     scope:
       path: ""        
@@ -116,7 +116,7 @@ defaults:
       show_meta: true   # Show metadata beneath all posts
       # sidebar:        # Possible values › left, right › by default there will be no sidebar
       comments: false
-      author: "Alex Dornburg"
+      author: Alex Dornburg
 
 
 
@@ -224,7 +224,7 @@ sass:
 #
 # used in _includes/footer_scripts.html
 
-google_analytics_tracking_id: UA-67372219-1
+#google_analytics_tracking_id: UA-67372219-1
 
 
 #   _                 _     _
