new navigation panel

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,70 +1,59 @@
-- title: Start
+- title: Home
   url: "/"
   side: left
 
-- title: Getting Started
-  url: "/getting-started/"
-  side: left
-
-- title: "Templates"
-  url: "/design/"
+- title: Publications
+  url: "/Pubs/"
   side: left
   dropdown:
-  - title: "Grid & Colors"
-    url: "/design/grid/"
-  - title: "Typography"
-    url: "/design/typography/typography/"
-  - title: "Page/Post"
-    url: "/design/page/"
-  - title: "Post-Left-Sidebar"
-    url: "/design/post-left-sidebar/"
-  - title: "Post-Right-Sidebar"
-    url: "/design/post-right-sidebar/"
-  - title: "Page Full-Width"
-    url: "/design/page-fullwidth/"
-  - title: "Blog-Page"
-    url: "/blog/"
-  - title: "Video"
-    url: "/design/video/"
-  - title: "Gallery"
-    url: "/design/gallery/"
-  - title: "Portfolio"
-    url: "/design/portfolio/"
+  - title: "Reprints"
+    url: "/Pubs/reprints"
+ 
+- title: Highlights
+  url: "/highlights/"
+  side: left  
 
-- title: "Header Styles"
-  url: "/headers/"
+- title: "Fish Team"
+  url: "/team/"
+  side: left
+  
+ 
+  
+
+- title: Software
+  url: "/software/"
   side: left
   dropdown:
-  - title: "Header with Full-Width-Image"
-    url: "/design/header-full-width-image/"
-  - title: "Header with Image and Pattern"
-    url: "/design/header-image-pattern/"
-  - title: "Header with image and color"
-    url: "/design/header-image-color/"
-  - title: "Header Only With Logo"
-    url: "/design/header-logo-only/"
-  - title: "Header With Text"
-    url: "/design/header-with-text/"
-  - title: "No Header"
-    url: "/design/no-header/"
-  - title: "No Header but Image"
-    url: "/design/no-header-but-image/"
+  - title: PhyR
+    url: "/software/PhyR/"
+  - title: "R Functions"
+    url: "/MiscR/"
+ 
 
-- title: Documentation
-  url: "/documentation/"
-  side: left
-  dropdown:
-  - title: "Changelog"
-    url: "/changelog/"
-  - title: "Roadmap"
-    url: "/roadmap/"
-
-- title: Blog
+- title: Blogs
   url: "/blog/"
   side: left
   dropdown:
+  - title: "Collection"
+    url: "/collection/"
+  - title: "NC Fishes"
+    url: "/fish_blog/"
+  - title: "Evolution and Ecology"
+    url: "/eeb/"
+  - title: "Fieldwork"
+    url: "/fieldwork/"
   - title: "Blog Archive"
     url: "/blog/archive/"
+
+- title: "Join Us"
+  url: "/Joinus/"
+  side: left
+  dropdown:
+  - title: "Internship Opportunities"
+    url: "/Joinus/Internships/"
+  - title: "Volunteer Opportunities"
+    url: "/Joinus/collections_volunteer/"
+  
 
 - title: "Search"
   url: "/search/"
