--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,7 +1,7 @@
 - name: GitHub
   url: 'http://github.com/carolinafishes'
   class: icon-github
-  title: "Code and data...
+  title: Code and data...
 
 - name: YouTube
   url: 'http://www.youtube.com/NCSM_Fishes'
