--- a/_data/network.yml
+++ b/_data/network.yml
@@ -1,19 +1,14 @@
-- menu_name: "Dankeschön"
-
-- name: "Icons by Daniel Bruce"
-  url: "http://entypo.com/"
-  class: "network-entypo"
-  title: "Icons by Daniel Bruce"
+- menu_name: "Foundation"
 
 - name: "Built on Foundation"
   url: "http://foundation.zurb.com/"
   class: "services-newsletter"
   title: "Built on Foundation"
 
-- name: "Images by Unsplash"
-  url: "http://unsplash.com/"
-  class: "rss-link"
-  title: "Images by Unsplash"
+- name: "Using Feeling Responsive by Phlow"
+  url: "https://phlow.github.io/feeling-responsive/"
+  class: "sitemap-link"
+  title: "https://phlow.github.io/feeling-responsive/"
 
 - name: "Using Backstretch by Scott Robbin"
   url: "http://srobbin.com/jquery-plugins/backstretch/"
