--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ credits: '<p>Created using <a href="http://jekyllrb.com/" target="_blank">Jekyll
 
 # Main author of the website
 # See > authors.yml
-author: Dornburg
+#author: Dornburg
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
