--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,6 +8,6 @@
 phlow: # replace this with your info
   name: "Dornburg"
   siterole: "webmaster, research curator"
-  email: alex.dornburg@naturalsciences.org
+  email: 'alex.dornburg@naturalsciences.org'
  # twitter: "@phlow"
 # you can add more authors here
