--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ defaults:
       show_meta: false 	# Hide metadata for all pages
       # sidebar:    		# Possible values › left, right › by default there will be no sidebar
       comments: false
-      author: Dornburg     # Default author for pages
+      #author: Dornburg     # Default author for pages
   -
     scope:
       path: ''
@@ -120,7 +120,7 @@ defaults:
       show_meta: true   # Show metadata for all posts
       # sidebar:        # Possible values › left, right › by default there will be no sidebar
       comments: false
-      author: Dornburg     # Default author for posts
+      #author: Dornburg     # Default author for posts
 
 
 
