--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,9 +5,10 @@
 # 3. Change default post/page authors in config.yml
 #
 # Resource › http://blog.sorryapp.com/blogging-with-jekyll/2014/02/06/adding-authors-to-your-jekyll-site.html
-phlow: # replace this with your info
+Dornburg: # replace this with your info
   name: "Dornburg"
   siterole: "webmaster, research curator"
-  email: 'alex.dornburg@naturalsciences.org'
+  uri: https://www.researchgate.net/profile/Alex_Dornburg/
+  email: 
  # twitter: "@phlow"
 # you can add more authors here
