--- a/_config.yml
+++ b/_config.yml
@@ -190,7 +190,7 @@ og_type:                            'website'
 #  Open _data/socialmedia.yml to adjust the left and right topbar navigation
 #
 
-#socialmedia:
+socialmedia:
  #   twitter: phlow
   #  facebook: phlow.media
 
