--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@
 # 3. Change default post/page authors in config.yml
 #
 # Resource › http://blog.sorryapp.com/blogging-with-jekyll/2014/02/06/adding-authors-to-your-jekyll-site.html
-Dornburg: # replace this with your info
+dornburg: # replace this with your info
   name: "Dornburg"
   siterole: "webmaster, research curator"
   uri: https://www.researchgate.net/profile/Alex_Dornburg/
