--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ credits: '<p>Created using <a href="http://jekyllrb.com/" target="_blank">Jekyll
 
 # Main author of the website
 # See > authors.yml
-author: dornburg
+author: phlow
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
@@ -111,7 +111,7 @@ defaults:
       show_meta: false 	# Hide metadata for all pages
       # sidebar:    		# Possible values › left, right › by default there will be no sidebar
       comments: false
-      author: dornburg     # Default author for pages
+      author: phlow     # Default author for pages
   -
     scope:
       path: ''
@@ -120,7 +120,7 @@ defaults:
       show_meta: true   # Show metadata for all posts
       # sidebar:        # Possible values › left, right › by default there will be no sidebar
       comments: false
-      author: dornburg     # Default author for posts
+      author: phlow     # Default author for posts
 
 
 
@@ -191,8 +191,8 @@ og_type:                            'website'
 #
 
 socialmedia:
-    #twitter: phlow
-    #facebook: phlow.media
+    twitter: phlow
+    facebook: phlow.media
 
 
 #        ____  _
@@ -204,7 +204,7 @@ socialmedia:
 #
 # used in _includes/comments
 
-#disqus_shortname: feelingresponsive
+disqus_shortname: carolinafishes
 
 
 #      _____
