--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,10 +5,10 @@
 # 3. Change default post/page authors in config.yml
 #
 # Resource › http://blog.sorryapp.com/blogging-with-jekyll/2014/02/06/adding-authors-to-your-jekyll-site.html
-dornburg: # replace this with your info
-  name: "Dornburg"
-  siterole: "webmaster, research curator"
-  uri: https://www.researchgate.net/profile/Alex_Dornburg/
-  email: 
- # twitter: "@phlow"
+phlow: # replace this with your info
+  name: "Phlow"
+  siterole: "webmaster, developer, copywriter, designer"
+  uri: http://phlow.de/
+  email:
+  twitter: "@phlow"
 # you can add more authors here
