--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ credits: '<p>Created using <a href="http://jekyllrb.com/" target="_blank">Jekyll
 
 # Main author of the website
 # See > authors.yml
-author: phlow
+author: dornburg
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
@@ -111,7 +111,7 @@ defaults:
       show_meta: false 	# Hide metadata for all pages
       # sidebar:    		# Possible values › left, right › by default there will be no sidebar
       comments: false
-      author: phlow     # Default author for pages
+      author: dornburg     # Default author for pages
   -
     scope:
       path: ''
@@ -120,7 +120,7 @@ defaults:
       show_meta: true   # Show metadata for all posts
       # sidebar:        # Possible values › left, right › by default there will be no sidebar
       comments: false
-      author: phlow     # Default author for posts
+      author: dornburg     # Default author for posts
 
 
 
