--- a/_config.yml
+++ b/_config.yml
@@ -204,7 +204,7 @@ socialmedia:
 #
 # used in _includes/comments
 
-disqus_shortname: carolinafishes
+disqus_shortname: feelingresponsive
 
 
 #      _____
