Adding media a coverage

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,14 +12,15 @@
 - title: Highlights
   url: "/highlights/"
   side: left  
+  dropdown:
+  - title: Media
+    url: "/highlights/Media/"
 
 - title: "Fish Team"
   url: "/team/"
   side: left
   
  
-  
-
 - title: Software
   url: "/software/"
   side: left
