--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@
   url: "/highlights/"
   side: left  
   dropdown:
-  - title: Media
+  - title: "Media"
     url: "/highlights/Media/"
 
 - title: "Fish Team"
