First TOAST tutorial pages
adding initial pages as manual develops

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -27,6 +27,8 @@
   dropdown:
   - title: phyinformR
     url: "/software/phyinformR/"
+  - title: TOAST
+    url: "/software/TOAST/"
   - title: "R Functions"
     url: "/MiscR/"
  
